--- a/accueil.html
+++ b/accueil.html
@@ -33,7 +33,7 @@
                 </li>
 
                 <li><a href="Questionnaire.html">Questionnaire</a></li>
-                <li><a href="Nous.html">L'équipe technique</a></li>
+                <li><a href="Nous.html">Nous</a></li>
             </ul>
         </nav>
     </div>
@@ -41,7 +41,7 @@
 
     <div class="cavaetretoutnoir">
         <div>
-            <img class="boxtitre" src="../images/accueil1.png">
+            <img class="boxtitre" src="image/wallpaper.png">
         </div>
         <div class="nousflex">
 
