--- a/SRC/Feu.html
+++ b/SRC/Feu.html
@@ -22,8 +22,8 @@
 
                 <li><a class="active">Monstres</a>
                     <ul>
-                        <li><a class="active">Eau</a></li>
-                        <li><a href="Feu.html">Feu</a></li>
+                        <li><a href="Eau.html">Eau</a></li>
+                        <li><a class="active">Feu</a></li>
                         <li><a href="Vent.html">Vent</a></li>
                         <li><a href="Lumiere.html">Lumiere</a></li>
                         <li><a href="Tenebre.html">Tenebre</a></li>
