--- a/accueil.html
+++ b/accueil.html
@@ -23,10 +23,10 @@
                 <li><a>Monstres</a>
                     <ul>
                         <li><a href="SRC/Eau.html">Eau</a></li>
-                        <li><a href="commerce/commerce.html">Feu</a></li>
-                        <li><a href="fac/fac.html">Vent</a></li>
-                        <li><a href="Prepa/prepa.html">Lumiere</a></li>
-                        <li><a href="DUT/dut.html">Tenebre</a></li>
+                        <li><a href="SRC/Feu.html">Feu</a></li>
+                        <li><a href="SRC/Vent.html">Vent</a></li>
+                        <li><a href="SRC/Lumiere.html">Lumiere</a></li>
+                        <li><a href="SRC/Tenebre.html">Tenebre</a></li>
 
 
                     </ul>
