--- a/accueil.html
+++ b/accueil.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="Src/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
     <title>Summoners war guide</title>
@@ -20,14 +20,14 @@
             <ul>
                 <li><a class="active">Accueil</a></li>
 
-                <li><a>Formations</a>
+                <li><a>Monstres</a>
                     <ul>
-                        <li><a href="inge/inge.html">Ingénieur</a></li>
-                        <li><a href="commerce/commerce.html">Commerce</a></li>
-                        <li><a href="fac/fac.html">FAC</a></li>
-                        <li><a href="Prepa/prepa.html">Classes Préparatoires</a></li>
-                        <li><a href="DUT/dut.html">DUT</a></li>
-                        <li><a href="bts/bts.html">BTS</a></li>
+                        <li><a href="SRC/Eau.html">Eau</a></li>
+                        <li><a href="commerce/commerce.html">Feu</a></li>
+                        <li><a href="fac/fac.html">Vent</a></li>
+                        <li><a href="Prepa/prepa.html">Lumiere</a></li>
+                        <li><a href="DUT/dut.html">Tenebre</a></li>
+
 
                     </ul>
                 </li>
