page monstre eau 1ere versionn fini

--- a/SRC/Eau.html
+++ b/SRC/Eau.html
@@ -38,128 +38,232 @@
     </div>
 
     <div class="formation">
-        <h2>Ecoles d'Ingénieurs</h2>
+        <h2>Monstres de type attaque</h2>
     </div>
     <hr>
 
     <div id="ingenieur">
-
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ece.html" target="blank"><img class="efrei" src="../../images/inge/logoece.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Eau/Taor_Icon.png" /> </a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Psamathe_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Alicia_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_efrei.html" target="blank"><img class="efrei" src="../../images/inge/logoefrei.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Eau/Beth_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_eivp.html" target="blank"><img class="efrei" src="../../images/inge/eivp.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_ensiie.html" target="blank"><img class="efrei" src="../../images/inge/logoensiie.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Eau/Sigmarus_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_epf.html" target="blank"><img class="efrei" src="../../images/inge/logoepf.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Eau/Theomars_Icon.png" /></a>
+
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_epita.html" target="blank"><img class="efrei" src="../../images/inge/logoepita.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Eau/Julie_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Lapis_Icon.png" /></a>
+
 
         </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Xiao_Lin_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Sabrina.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Talia.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Mina_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Tarq_Icon.png" /></a>
+
+        </div>
+
+
     </div>
     </br>
 
     <div class="formation">
-        <h2>Ecoles d'Ingénieurs</h2>
+        <h2>Monstres de type Bruiser</h2>
     </div>
     <hr>
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_esiee.html" target="blank"><img class="efrei" src="../../images/inge/esiee.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_esilv.html" target="blank"><img class="efrei" src="../../images/inge/logoesilv.png" /></a>
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_esme.html" target="blank"><img class="efrei" src="../../images/inge/esme.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Eau/Chow_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_espci.html" target="blank"><img class="efrei" src="../../images/inge/espci.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Eau/Camille_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_estaca.html" target="blank"><img class="efrei" src="../../images/inge/logoestaca.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_estp.html" target="blank"><img class="efrei" src="../../images/inge/estp.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_isep.html" target="blank"><img class="efrei" src="../../images/inge/logoISEP.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_paristech.html" target="blank"><img class="efrei" src="../../images/inge/logomines.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Eau/Chandra_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_polysud.html" target="blank"><img class="efrei" src="../../images/inge/poly.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Eau/Mo_Long_Icon.png" /></a>
 
         </div>
+
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_polytech.html" target="blank"><img class="efrei" src="../../images/inge/logopolytech.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Eau/Shi_Hou_Icon.png" /></a>
 
         </div>
-
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ponts.html" target="blank"><img class="efrei" src="../../images/inge/logoponts.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Eau/Rigel_Icon.png" /></a>
         </div>
 
-        <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_supgalilee.html" target="blank"><img class="efrei" src="../../images/inge/logosupgalile.png" /></a>
 
-        </div>
 
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_supmeca.html" target="blank"><img class="efrei" src="../../images/inge/logomeca.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_telecom.html" target="blank"><img class="efrei" src="../../images/inge/logotelecom.png" /></a>
-
-        </div>
     </div>
+
+    <br/>
+
+    <div class="formation">
+        <h2>Monstres de type support</h2>
+    </div>
+    <hr>
+    <div id="ingenieur">
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Woosa_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Anavel_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Ariel_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Bastet_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Emma_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Galion_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Megan_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Rina_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Konamiya_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Lulu_Icon.png" /></a>
+
+        </div>
+
+
+
+
+
+
+    </div>
+    <br/>
+
+    <div class="formation">
+        <h2>Monstres de type controle</h2>
+    </div>
+    <hr>
+    <div id="ingenieur">
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Verad_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Poseidon_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Praha_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Tyron_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Eau/Orion_Icon.png" /></a>
+        </div>
+
+
+
+
+
+
+
+
+    </div>
+
 
 
 
@@ -198,11 +302,8 @@
     }
     
     .ingenieur1 {
-        margin-top: 10%;
-        margin-left: 5%;
-        margin-right: 5%;
+        margin: auto;
         height: 100px;
-        color: #ffffff;
         text-align: center;
     }
     
