tout les monstres

--- a/SRC/Tenebre.html
+++ b/SRC/Tenebre.html
@@ -27,6 +27,7 @@
                         <li><a href="Vent.html">Vent</a></li>
                         <li><a href="Lumiere.html">Lumiere</a></li>
                         <li><a class="active">Tenebre</a></li>
+
                     </ul>
                 </li>
 
@@ -37,128 +38,280 @@
     </div>
 
     <div class="formation">
-        <h2>Ecoles d'Ingénieurs</h2>
+        <h2>Monstres de type attaque</h2>
     </div>
     <hr>
 
     <div id="ingenieur">
 
+
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ece.html" target="blank"><img class="efrei" src="../../images/inge/logoece.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Craka_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_efrei.html" target="blank"><img class="efrei" src="../../images/inge/logoefrei.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Grogen_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_eivp.html" target="blank"><img class="efrei" src="../../images/inge/eivp.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Han_Icon.png" /></a>
+
+        </div>
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Jaara_Icon.png" /> </a>
+
+        </div>
+
+
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Lydia_Icon.png" /></a>
+
+        </div>
+
+
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Nyx_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Wolyung_Icon.png" /></a>
+
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ensiie.html" target="blank"><img class="efrei" src="../../images/inge/logoensiie.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Zeratu_Icon.png" /></a>
 
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Martina_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/belita.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_epf.html" target="blank"><img class="efrei" src="../../images/inge/logoepf.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Hrungnir_Icon.png" /></a>
         </div>
+
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_epita.html" target="blank"><img class="efrei" src="../../images/inge/logoepita.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Fei_Icon.png" /></a>
+
 
         </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Miho_Icon.png" /></a>
+        </div>
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Kro_Icon.png" /></a>
+
+        </div>
+
+
     </div>
     </br>
 
     <div class="formation">
-        <h2>Ecoles d'Ingénieurs</h2>
+        <h2>Monstres de type Bruiser</h2>
     </div>
     <hr>
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_esiee.html" target="blank"><img class="efrei" src="../../images/inge/esiee.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Fermion_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Mi_Ying_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_esilv.html" target="blank"><img class="efrei" src="../../images/inge/logoesilv.png" /></a>
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_esme.html" target="blank"><img class="efrei" src="../../images/inge/esme.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_espci.html" target="blank"><img class="efrei" src="../../images/inge/espci.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Ragdoll_Icon.png" /></a>
 
         </div>
 
+
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_estaca.html" target="blank"><img class="efrei" src="../../images/inge/logoestaca.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Rahul_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_estp.html" target="blank"><img class="efrei" src="../../images/inge/estp.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_isep.html" target="blank"><img class="efrei" src="../../images/inge/logoISEP.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_paristech.html" target="blank"><img class="efrei" src="../../images/inge/logomines.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Son_Zhang_Lao_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_polysud.html" target="blank"><img class="efrei" src="../../images/inge/poly.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Trinite_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_polytech.html" target="blank"><img class="efrei" src="../../images/inge/logopolytech.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Jultan_Icon.png" /></a>
         </div>
 
-        <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ponts.html" target="blank"><img class="efrei" src="../../images/inge/logoponts.png" /></a>
 
-        </div>
 
-        <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_supgalilee.html" target="blank"><img class="efrei" src="../../images/inge/logosupgalile.png" /></a>
 
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_supmeca.html" target="blank"><img class="efrei" src="../../images/inge/logomeca.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_telecom.html" target="blank"><img class="efrei" src="../../images/inge/logotelecom.png" /></a>
-
-        </div>
     </div>
+
+    <br/>
+
+    <div class="formation">
+        <h2>Monstres de type support</h2>
+    </div>
+    <hr>
+    <div id="ingenieur">
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Veromos_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Thebae_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Amduat_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Betta_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Dias_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Fregate_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Icares_Icon.png" /></a>
+
+        </div>
+
+
+
+
+
+    </div>
+    <br/>
+
+    <div class="formation">
+        <h2>Monstres de type controle</h2>
+    </div>
+    <hr>
+    <div id="ingenieur">
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Cadiz_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Giana_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Manannan_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Nephthys_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Nicki_Icon.png" /></a>
+        </div>
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Woonsa_Icon.png" /></a>
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Basalt_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Thrain_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Tenebre/Mantura_Icon.png" /></a>
+        </div>
+
+
+
+
+
+
+    </div>
+
 
 
 
@@ -197,11 +350,8 @@
     }
     
     .ingenieur1 {
-        margin-top: 10%;
-        margin-left: 5%;
-        margin-right: 5%;
+        margin: auto;
         height: 100px;
-        color: #ffffff;
         text-align: center;
     }
     
