--- a/SRC/Vent.html
+++ b/SRC/Vent.html
@@ -27,6 +27,7 @@
                         <li><a class="active">Vent</a></li>
                         <li><a href="Lumiere.html">Lumiere</a></li>
                         <li><a href="Tenebre.html">Tenebre</a></li>
+
                     </ul>
                 </li>
 
@@ -37,7 +38,7 @@
     </div>
 
     <div class="formation">
-        <h2>Ecoles d'Ingénieurs</h2>
+        <h2>Monstres de type attaque</h2>
     </div>
     <hr>
 
@@ -45,120 +46,236 @@
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ece.html" target="blank"><img class="efrei" src="../../images/inge/logoece.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Vent/Teshar_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_efrei.html" target="blank"><img class="efrei" src="../../images/inge/logoefrei.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_eivp.html" target="blank"><img class="efrei" src="../../images/inge/eivp.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_ensiie.html" target="blank"><img class="efrei" src="../../images/inge/logoensiie.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Vent/Pungbaek_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_epf.html" target="blank"><img class="efrei" src="../../images/inge/logoepf.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Vent/Seara_Icon.png" /></a>
+
         </div>
+
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_epita.html" target="blank"><img class="efrei" src="../../images/inge/logoepita.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Vent/Akhamamir_Icon.png" /></a>
 
         </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Ethna_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Katarina_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Lagmaron_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Hraesvelg_Icon.png" /></a>
+        </div>
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Lushen_Icon.png" /> </a>
+
+        </div>
+
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Orochi_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Shimitae_Icon.png" /></a>
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Cuivre_Icon.png" /></a>
+
+        </div>
+
+
+
+
+
+
+
+
+
     </div>
     </br>
 
     <div class="formation">
-        <h2>Ecoles d'Ingénieurs</h2>
+        <h2>Monstres de type Bruiser</h2>
     </div>
     <hr>
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_esiee.html" target="blank"><img class="efrei" src="../../images/inge/esiee.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_esilv.html" target="blank"><img class="efrei" src="../../images/inge/logoesilv.png" /></a>
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_esme.html" target="blank"><img class="efrei" src="../../images/inge/esme.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Vent/Feng_Yan_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_espci.html" target="blank"><img class="efrei" src="../../images/inge/espci.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Vent/Leo_Icon.png" /></a>
         </div>
+
+
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_estaca.html" target="blank"><img class="efrei" src="../../images/inge/logoestaca.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Vent/Ritesh_Icon.png" /></a>
 
         </div>
+
+
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_estp.html" target="blank"><img class="efrei" src="../../images/inge/estp.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_isep.html" target="blank"><img class="efrei" src="../../images/inge/logoISEP.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_paristech.html" target="blank"><img class="efrei" src="../../images/inge/logomines.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Vent/Xing_Zhe_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_polysud.html" target="blank"><img class="efrei" src="../../images/inge/poly.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Vent/Ramagos_Icon.png" /></a>
         </div>
 
-        <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_polytech.html" target="blank"><img class="efrei" src="../../images/inge/logopolytech.png" /></a>
 
-        </div>
 
-        <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ponts.html" target="blank"><img class="efrei" src="../../images/inge/logoponts.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_supgalilee.html" target="blank"><img class="efrei" src="../../images/inge/logosupgalile.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_supmeca.html" target="blank"><img class="efrei" src="../../images/inge/logomeca.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_telecom.html" target="blank"><img class="efrei" src="../../images/inge/logotelecom.png" /></a>
-
-        </div>
     </div>
+
+    <br/>
+
+    <div class="formation">
+        <h2>Monstres de type support</h2>
+    </div>
+    <hr>
+    <div id="ingenieur">
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Eladriel_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Jamire_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Briand_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Chasun_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Delphoi_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Imesety_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Shannon_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Bernard_Icon.png" /></a>
+
+        </div>
+
+
+
+
+    </div>
+    <br/>
+
+    <div class="formation">
+        <h2>Monstres de type controle</h2>
+    </div>
+    <hr>
+    <div id="ingenieur">
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Charlotte_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Ganymede_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Hathor_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Tiana_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Triton_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Vent/Mav_Icon.png" /></a>
+        </div>
+
+
+
+
+
+
+
+    </div>
+
 
 
 
@@ -197,11 +314,8 @@
     }
     
     .ingenieur1 {
-        margin-top: 10%;
-        margin-left: 5%;
-        margin-right: 5%;
+        margin: auto;
         height: 100px;
-        color: #ffffff;
         text-align: center;
     }
     
