--- a/SRC/Feu.html
+++ b/SRC/Feu.html
@@ -38,128 +38,249 @@
     </div>
 
     <div class="formation">
-        <h2>Ecoles d'Ingénieurs</h2>
+        <h2>Monstres de type attaque</h2>
     </div>
     <hr>
 
     <div id="ingenieur">
-
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ece.html" target="blank"><img class="efrei" src="../../images/inge/logoece.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Feu/Zaiross_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_efrei.html" target="blank"><img class="efrei" src="../../images/inge/logoefrei.png" /></a>
-        </div>
+            <a><img class="efrei" src="../image/Monstres/Feu/Brandia_Icon.png" /></a>
 
+        </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_eivp.html" target="blank"><img class="efrei" src="../../images/inge/eivp.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_ensiie.html" target="blank"><img class="efrei" src="../../images/inge/logoensiie.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Feu/Perna_Icon.png" /></a>
 
 
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_epf.html" target="blank"><img class="efrei" src="../../images/inge/logoepf.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Feu/Daphnis_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres//Feu/Raki_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Tesarion_Icon.png" /></a>
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Antares_Icon.png" /> </a>
+
+        </div>
+
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Garo_Icon.png" /></a>
+
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_epita.html" target="blank"><img class="efrei" src="../../images/inge/logoepita.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Feu/Hwa_Icon.png" /></a>
 
         </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Shaina.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Kahli_Icon.png" /></a>
+        </div>
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Raoq_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Bulldozer_Icon.png" /></a>
+
+        </div>
+
+
+
+
     </div>
     </br>
 
     <div class="formation">
-        <h2>Ecoles d'Ingénieurs</h2>
+        <h2>Monstres de type Bruiser</h2>
     </div>
     <hr>
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_esiee.html" target="blank"><img class="efrei" src="../../images/inge/esiee.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_esilv.html" target="blank"><img class="efrei" src="../../images/inge/logoesilv.png" /></a>
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_esme.html" target="blank"><img class="efrei" src="../../images/inge/esme.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Feu/Kumar_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_espci.html" target="blank"><img class="efrei" src="../../images/inge/espci.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Feu/Laika_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_estaca.html" target="blank"><img class="efrei" src="../../images/inge/logoestaca.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_estp.html" target="blank"><img class="efrei" src="../../images/inge/estp.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_isep.html" target="blank"><img class="efrei" src="../../images/inge/logoISEP.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_paristech.html" target="blank"><img class="efrei" src="../../images/inge/logomines.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Feu/Mei_Hou_Wang_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_polysud.html" target="blank"><img class="efrei" src="../../images/inge/poly.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Feu/Rakan_Icon.png" /></a>
 
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Velajuel_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Xiong_Fei_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_polytech.html" target="blank"><img class="efrei" src="../../images/inge/logopolytech.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Feu/Vanessa_Icon.png" /></a>
         </div>
 
-        <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ponts.html" target="blank"><img class="efrei" src="../../images/inge/logoponts.png" /></a>
 
-        </div>
 
-        <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_supgalilee.html" target="blank"><img class="efrei" src="../../images/inge/logosupgalile.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_supmeca.html" target="blank"><img class="efrei" src="../../images/inge/logomeca.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_telecom.html" target="blank"><img class="efrei" src="../../images/inge/logotelecom.png" /></a>
-
-        </div>
     </div>
+
+    <br/>
+
+    <div class="formation">
+        <h2>Monstres de type support</h2>
+    </div>
+    <hr>
+    <div id="ingenieur">
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Juno_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Chloe_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Hwahee_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Khmun_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Verdehile_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Lisa_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Racuni_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Spectra_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Colleen_Icon.png" /></a>
+        </div>
+
+
+
+    </div>
+    <br/>
+
+    <div class="formation">
+        <h2>Monstres de type controle</h2>
+    </div>
+    <hr>
+    <div id="ingenieur">
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Chiwu_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Okeanos_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Rica_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Sekhmet_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/maruna.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Feu/Baretta_Icon.png" /></a>
+        </div>
+
+
+
+
+
+
+
+
+    </div>
+
 
 
 
@@ -198,11 +319,8 @@
     }
     
     .ingenieur1 {
-        margin-top: 10%;
-        margin-left: 5%;
-        margin-right: 5%;
+        margin: auto;
         height: 100px;
-        color: #ffffff;
         text-align: center;
     }
     
