--- a/SRC/Lumiere.html
+++ b/SRC/Lumiere.html
@@ -27,6 +27,7 @@
                         <li><a href="Vent.html">Vent</a></li>
                         <li><a class="active">Lumiere</a></li>
                         <li><a href="Tenebre.html">Tenebre</a></li>
+
                     </ul>
                 </li>
 
@@ -37,7 +38,7 @@
     </div>
 
     <div class="formation">
-        <h2>Ecoles d'Ingénieurs</h2>
+        <h2>Monstres de type attaque</h2>
     </div>
     <hr>
 
@@ -45,120 +46,275 @@
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ece.html" target="blank"><img class="efrei" src="../../images/inge/logoece.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Elenoa_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_efrei.html" target="blank"><img class="efrei" src="../../images/inge/logoefrei.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Eludia_Icon.png" /></a>
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Zerath_Icon.png" /></a>
+
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_eivp.html" target="blank"><img class="efrei" src="../../images/inge/eivp.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Oberon_Icon.png" /></a>
+
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ensiie.html" target="blank"><img class="efrei" src="../../images/inge/logoensiie.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Asima_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Bailey_Icon.png" /></a>
 
 
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_epf.html" target="blank"><img class="efrei" src="../../images/inge/logoepf.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Deva_Icon.png" /></a>
+        </div>
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Emily.png" /> </a>
+
+        </div>
+
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Liu_Mei_Icon.png" /></a>
+
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_epita.html" target="blank"><img class="efrei" src="../../images/inge/logoepita.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Lyn_Icon.png" /></a>
 
         </div>
+
+
+
+
     </div>
     </br>
 
     <div class="formation">
-        <h2>Ecoles d'Ingénieurs</h2>
+        <h2>Monstres de type Bruiser</h2>
     </div>
     <hr>
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_esiee.html" target="blank"><img class="efrei" src="../../images/inge/esiee.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_esilv.html" target="blank"><img class="efrei" src="../../images/inge/logoesilv.png" /></a>
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_esme.html" target="blank"><img class="efrei" src="../../images/inge/esme.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Akroma_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_espci.html" target="blank"><img class="efrei" src="../../images/inge/espci.png" /></a>
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Artamiel_Icon.png" /></a>
+        </div>
 
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Jager_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Qitian_Dasheng_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Shan_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_estaca.html" target="blank"><img class="efrei" src="../../images/inge/logoestaca.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_estp.html" target="blank"><img class="efrei" src="../../images/inge/estp.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_isep.html" target="blank"><img class="efrei" src="../../images/inge/logoISEP.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_paristech.html" target="blank"><img class="efrei" src="../../images/inge/logomines.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Shazam_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_polysud.html" target="blank"><img class="efrei" src="../../images/inge/poly.png" /></a>
-
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Halphas_Icon.png" /></a>
         </div>
 
-        <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_polytech.html" target="blank"><img class="efrei" src="../../images/inge/logopolytech.png" /></a>
 
-        </div>
 
-        <div class="ingenieur1">
 
-            <a href="../inge/page_inge/page_ponts.html" target="blank"><img class="efrei" src="../../images/inge/logoponts.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_supgalilee.html" target="blank"><img class="efrei" src="../../images/inge/logosupgalile.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_supmeca.html" target="blank"><img class="efrei" src="../../images/inge/logomeca.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a href="../inge/page_inge/page_telecom.html" target="blank"><img class="efrei" src="../../images/inge/logotelecom.png" /></a>
-
-        </div>
     </div>
+
+    <br/>
+
+    <div class="formation">
+        <h2>Monstres de type support</h2>
+    </div>
+    <hr>
+    <div id="ingenieur">
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Nigong_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Yeonhong_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Julianne_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Amarna_Icon.png" /></a>
+
+        </div>
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Hwadam_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Iona_Icon.png" /></a>
+
+        </div>
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Kabilla_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Mihael_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Teon_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Ahman_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Belladeon_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Darion_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Eshir_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Fran_Icon.png" /></a>
+        </div>
+
+
+    </div>
+    <br/>
+
+    <div class="formation">
+        <h2>Monstres de type controle</h2>
+    </div>
+    <hr>
+    <div id="ingenieur">
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Pontos_Icon.png" /></a>
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Tian_Lang_Icon.png" /></a>
+        </div>
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Isis_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Laima_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Lora_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Gemini_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Iris_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" src="../image/Monstres/Lumiere/Loren.png" /></a>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
 
 
 
@@ -197,11 +353,8 @@
     }
     
     .ingenieur1 {
-        margin-top: 10%;
-        margin-left: 5%;
-        margin-right: 5%;
+        margin: auto;
         height: 100px;
-        color: #ffffff;
         text-align: center;
     }
     
