--- a/SRC/Lumiere.html
+++ b/SRC/Lumiere.html
@@ -31,8 +31,8 @@
                     </ul>
                 </li>
 
-                <li><a href="../Questionnaire.html">Questionnaire</a></li>
-                <li><a href="../nous.html">Nous</a></li>
+                <li><a href="../Stratégie.html">Stratégie</a></li>
+                <li><a href="../A vous de jouer.html">A vous de jouer !</a></li>
             </ul>
         </nav>
     </div>
