--- a/accueil.html
+++ b/accueil.html
@@ -32,8 +32,8 @@
                     </ul>
                 </li>
 
-                <li><a href="Questionnaire.html">Questionnaire</a></li>
-                <li><a href="Nous.html">Nous</a></li>
+                <li><a href="Stratégie.html">Stratégie</a></li>
+                <li><a href="A vous de jouer.html">A vous de jouer !</a></li>
             </ul>
         </nav>
     </div>
@@ -94,7 +94,7 @@
 
         </div>
 
-        <footer class="footer">Réalisé par l'équipe d'ADRIEN sans méline</footer>
+        <footer class="footer"> <input type="button" class="buton" value="Qui sommes-nous ?" onClick="javascript:document.location.href='Nous.html'" /></footer>
     </div>
 
 
