--- a/Nous.html
+++ b/Nous.html
@@ -33,10 +33,17 @@
                 </li>
 
                 <li><a href="Stratégie.html">Stratégie</a></li>
-                <li><a href="A vous de jouer.html">A vous de jouer !</a></li>
+                <li><a href="A vous de jouer.html">Quizz</a></li>
             </ul>
         </nav>
     </div>
+
+
+
+    
+    
+
+
 
     <script>
         window.onscroll = function() {
