--- a/SRC/Tenebre.html
+++ b/SRC/Tenebre.html
@@ -315,6 +315,7 @@
 
 
 
+    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='Nous.html'" /></footer>
 
 
     <div class="contenu">
@@ -337,7 +338,7 @@
         }
     </script>
 
-    <footer class="footer">Réalisé par l'équipe DREEMS</footer>
+   
 
 </body>
 
