--- a/A vous de jouer.html
+++ b/A vous de jouer.html
@@ -33,7 +33,7 @@
                 </li>
 
                 <li><a href="Stratégie.html">Stratégie</a></li>
-                <li><a class="active">A vous de jouer !</a></li>
+                <li><a class="active">Quizz</a></li>
             </ul>
         </nav>
     </div>
@@ -44,7 +44,7 @@
         <h3>Etes vous sûrs bien de connaître l'univers de Pokémon ? <em><br>VERIFIEZ CELA AVEC NOTRE QCM CI-DESSOUS !! :) </em> </h3>
 
 
-        <h3>1) Qui est le dresseur de Pikachu ? :</h3>
+        <h3>1) </h3>
 
         <form name="QCM">
             <input type="radio" name="choix" value="choix1" />Pierre
@@ -164,7 +164,12 @@
         
         </script>
 
+
+
     </div>
+
+    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='Nous.html'" /></footer>
+
     <script>
         window.onscroll = function() {
             myFunction()
