--- a/SRC/Lumiere.html
+++ b/SRC/Lumiere.html
@@ -32,7 +32,7 @@
                 </li>
 
                 <li><a href="../Stratégie.html">Stratégie</a></li>
-                <li><a href="../A vous de jouer.html">A vous de jouer !</a></li>
+                <li><a href="../A vous de jouer.html">Quizz</a></li>
             </ul>
         </nav>
     </div>
@@ -315,7 +315,7 @@
 
     </div>
 
-
+    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='Nous.html'" /></footer>
 
 
 
@@ -340,8 +340,7 @@
         }
     </script>
 
-    <footer class="footer">Réalisé par l'équipe DREEMS</footer>
-
+    
 </body>
 
 <style>
