--- a/SRC/Vent.html
+++ b/SRC/Vent.html
@@ -32,7 +32,7 @@
                 </li>
 
                 <li><a href="../Stratégie.html">Stratégie</a></li>
-                <li><a href="../A vous de jouer.html">A vous de jouer !</a></li>
+                <li><a href="../A vous de jouer.html">Quizz</a></li>
             </ul>
         </nav>
     </div>
@@ -280,6 +280,7 @@
 
 
 
+    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='Nous.html'" /></footer>
 
     <div class="contenu">
 
@@ -301,7 +302,6 @@
         }
     </script>
 
-    <footer class="footer">Réalisé par l'équipe DREEMS</footer>
 
 </body>
 
