--- a/Stratégie.html
+++ b/Stratégie.html
@@ -33,12 +33,13 @@
                 </li>
 
                 <li><a class="active">Stratégie</a></li>
-                <li><a href="A vous de jouer.html">A vous de jouer !</a></li>
+                <li><a href="A vous de jouer.html">Quizz</a></li>
             </ul>
         </nav>
     </div>
 
 
+    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='Nous.html'" /></footer>
 
     <script>
         window.onscroll = function() {
