--- a/accueil.html
+++ b/accueil.html
@@ -33,7 +33,7 @@
                 </li>
 
                 <li><a href="Stratégie.html">Stratégie</a></li>
-                <li><a href="A vous de jouer.html">A vous de jouer !</a></li>
+                <li><a href="A vous de jouer.html">Quizz</a></li>
             </ul>
         </nav>
     </div>
@@ -94,8 +94,9 @@
 
         </div>
 
-        <footer class="footer"> <input type="button" class="buton" value="Qui sommes-nous ?" onClick="javascript:document.location.href='Nous.html'" /></footer>
+        
     </div>
+    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='Nous.html'" /></footer>
 
 
     <script>
