--- a/SRC/Eau.html
+++ b/SRC/Eau.html
@@ -266,7 +266,7 @@
 
 
 
-    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='Nous.html'" /></footer>
+    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='../Nous.html'" /></footer>
 
 
     <div class="contenu">
