--- a/SRC/Feu.html
+++ b/SRC/Feu.html
@@ -282,7 +282,7 @@
     </div>
 
 
-    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='Nous.html'" /></footer>
+    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='../Nous.html'" /></footer>
 
 
 
@@ -316,10 +316,11 @@
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-around;
+        margin-left: 2%;
     }
     
     .ingenieur1 {
-        margin: auto;
+        margin:15px;
         height: 100px;
         text-align: center;
     }
