--- a/SRC/Tenebre.html
+++ b/SRC/Tenebre.html
@@ -32,7 +32,7 @@
                 </li>
 
                 <li><a href="../Stratégie.html">Stratégie</a></li>
-                <li><a href="../A vous de jouer.html">A vous de jouer !</a></li>
+                <li><a href="../A vous de jouer.html">Quizz</a></li>
             </ul>
         </nav>
     </div>
@@ -315,7 +315,7 @@
 
 
 
-    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='Nous.html'" /></footer>
+    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='../Nous.html'" /></footer>
 
 
     <div class="contenu">
@@ -348,10 +348,11 @@
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-around;
+        margin-left: 2%;
     }
     
     .ingenieur1 {
-        margin: auto;
+        margin:15px;
         height: 100px;
         text-align: center;
     }
