--- a/SRC/Vent.html
+++ b/SRC/Vent.html
@@ -280,7 +280,7 @@
 
 
 
-    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='Nous.html'" /></footer>
+    <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='../Nous.html'" /></footer>
 
     <div class="contenu">
 
@@ -311,10 +311,11 @@
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-around;
+        margin-left: 2%;
     }
     
     .ingenieur1 {
-        margin: auto;
+        margin:15px;
         height: 100px;
         text-align: center;
     }
